--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
@@ -21,6 +22,7 @@
     "express-session": "^1.17.3",
     "helmet": "^5.1.0",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.30.7",
