--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "sharp": "^0.30.7",
     "slugify": "^1.6.5",
     "validator": "^13.7.0",
