--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.21.3",
+    "sequelize-bcrypt": "^1.2.0",
+    "sequelize-slugify": "^1.6.1",
     "sharp": "^0.30.7",
     "slugify": "^1.6.5",
     "validator": "^13.7.0",
@@ -37,6 +42,7 @@
   "author": "Stan Kotovych",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "sequelize-cli": "^6.4.1"
   }
 }
