--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sharp": "^0.30.7",
     "slugify": "^1.6.5",
     "sql-sanitizer": "^1.0.0",
+    "unique-username-generator": "^1.1.1",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   },
